# slang-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
shaders/: Cargo.toml
shaders/src/: lib.rs
slang/: Cargo.toml  README.md
slang-sys/: Cargo.toml  README.md  build.rs
slang/examples/: main.rs
slang/src/: enums.rs  lib.rs  macros.rs  result.rs
